# turing-game

./: .gitignore  .headache.dirs  CHANGES.md  COPYING.HEADER  LICENSE  README.md  dune-project  index.html  turing-game-tests.opam  turing-game.opam
.github/workflows/: ci.yml  deploy-odoc.yml  more-ci.yml
config/: dune  main.ml
lib/turing_game/src/: Turing_game_sites.mli  code.ml  code.mli  codes.ml  codes.mli  complete_solver.ml  condition.ml  condition.mli  config.ml  config.mli  criteria.ml  criteria.mli  decoder.ml  decoder.mli  decoders.ml  decoders.mli  default_config.ml  default_config.mli  digit.ml  digit.mli  digits.ml  digits.mli  dune  immutable_array.ml  immutable_array.mli  interactive_solver.ml  interactive_solver.mli  partition.ml  partition.mli  predicate.ml  predicate.mli  resolution_path.ml  resolution_path.mli  solver.ml  solver.mli  symbol.ml  symbol.mli  turing_game.ml  turing_game.mli  verifier.ml  (+8 more)
lib/turing_game/test/: dune  test__complete_solver.ml  test__decoder.ml  test__decoder.mli  test__interactive_solver.ml  test__interactive_solver.mli  test__partition.ml  test__solver.ml  test__turing_game.ml
test/: dune  solver-2.t  solver.t
turing-game/: db.js  index.html
turing-game-tests/: db.js  index.html
turing-game-tests/Turing_game_test/: index.html
turing-game/Turing_game/: index.html
turing-game/Turing_game/Code/: index.html
turing-game/Turing_game/Codes/: index.html
turing-game/Turing_game/Codes/With_sorted_sexp/: index.html
turing-game/Turing_game/Complete_solver/: index.html
turing-game/Turing_game/Complete_solver/Is_complete_result/: index.html
turing-game/Turing_game/Complete_solver/Is_complete_result/Trace/: index.html
turing-game/Turing_game/Complete_solver/Is_complete_result/Trace/Result/: index.html
turing-game/Turing_game/Condition/: index.html
turing-game/Turing_game/Config/: index.html
turing-game/Turing_game/Criteria/: index.html
turing-game/Turing_game/Decoder/: index.html
turing-game/Turing_game/Decoder/Criteria_and_probability/: index.html
turing-game/Turing_game/Decoder/Hypothesis/: index.html
turing-game/Turing_game/Decoder/Test_results/: index.html
turing-game/Turing_game/Decoder/Test_results/Key/: index.html
turing-game/Turing_game/Decoder/Verifier/: index.html
turing-game/Turing_game/Decoder/Verifier_status/: index.html
turing-game/Turing_game/Decoders/: index.html
turing-game/Turing_game/Digit/: index.html
turing-game/Turing_game/Digit/Tuple/: index.html
turing-game/Turing_game/Digit/Tuple/Applicative_infix/: index.html
turing-game/Turing_game/Digit/Tuple/Fields/: index.html
turing-game/Turing_game/Digit/Tuple/Fields/Direct/: index.html
turing-game/Turing_game/Digits/: index.html
turing-game/Turing_game/Interactive_solver/: index.html
turing-game/Turing_game/Interactive_solver/Evaluation/: index.html
turing-game/Turing_game/Interactive_solver/Expected_information_gained/: index.html
turing-game/Turing_game/Interactive_solver/Request_test/: index.html
turing-game/Turing_game/Interactive_solver/Step/: index.html
turing-game/Turing_game/Interactive_solver/Test_evaluation/: index.html
turing-game/Turing_game/Interactive_solver/Which_hypotheses/: index.html
turing-game/Turing_game/Partition/: index.html
turing-game/Turing_game/Predicate/: index.html
turing-game/Turing_game/Resolution_path/: index.html
turing-game/Turing_game/Resolution_path/Compare_by_cost/: index.html
turing-game/Turing_game/Resolution_path/Cost/: index.html
turing-game/Turing_game/Resolution_path/Round/: index.html
turing-game/Turing_game/Symbol/: index.html
turing-game/Turing_game/Symbol/Color/: index.html
turing-game/Turing_game/Symbol/Tuple/: index.html
turing-game/Turing_game/Symbol/Tuple/Applicative_infix/: index.html
turing-game/Turing_game/Symbol/Tuple/Fields/: index.html
turing-game/Turing_game/Symbol/Tuple/Fields/Direct/: index.html
turing-game/Turing_game/Verifier/: index.html
turing-game/Turing_game/Verifier/Name/: index.html
turing-game/Turing_game/Verifier_name/: index.html
turing-game/Turing_game/Verifier_name/Hash_queue/: index.html
turing-game/Turing_game/Verifier_name/Hash_set/: index.html
turing-game/Turing_game/Verifier_name/Hash_set/Provide_bin_io/: index.html
turing-game/Turing_game/Verifier_name/Hash_set/Provide_bin_io/argument-1-X/: index.html
turing-game/Turing_game/Verifier_name/Hash_set/Provide_of_sexp/: index.html
turing-game/Turing_game/Verifier_name/Hash_set/Provide_of_sexp/argument-1-X/: index.html
turing-game/Turing_game/Verifier_name/Map/: index.html
turing-game/Turing_game/Verifier_name/Map/Key/: index.html
turing-game/Turing_game/Verifier_name/Map/Provide_bin_io/: index.html
turing-game/Turing_game/Verifier_name/Map/Provide_bin_io/argument-1-Key/: index.html
turing-game/Turing_game/Verifier_name/Map/Provide_hash/: index.html
turing-game/Turing_game/Verifier_name/Map/Provide_hash/argument-1-Key/: index.html
turing-game/Turing_game/Verifier_name/Map/Provide_of_sexp/: index.html
turing-game/Turing_game/Verifier_name/Map/Provide_of_sexp/argument-1-Key/: index.html
turing-game/Turing_game/Verifier_name/Replace_polymorphic_compare/: index.html
turing-game/Turing_game/Verifier_name/Set/: index.html
turing-game/Turing_game/Verifier_name/Set/Elt/: index.html
turing-game/Turing_game/Verifier_name/Set/Provide_bin_io/: index.html
turing-game/Turing_game/Verifier_name/Set/Provide_bin_io/argument-1-Elt/: index.html
turing-game/Turing_game/Verifier_name/Set/Provide_hash/: index.html
turing-game/Turing_game/Verifier_name/Set/Provide_hash/argument-1-Elt/: index.html
turing-game/Turing_game/Verifier_name/Set/Provide_of_sexp/: index.html
turing-game/Turing_game/Verifier_name/Stable/: index.html
turing-game/Turing_game/Verifier_name/Stable/V1/: index.html
turing-game/Turing_game/Verifier_name/Table/: index.html
turing-game/Turing_game/Verifier_name/Table/Provide_bin_io/: index.html
turing-game/Turing_game/Verifier_name/Table/Provide_of_sexp/: index.html
turing-game/Turing_game/Verifiers/: index.html
(+7 files in other folders)
