(library
 (name turing_game)
 (public_name turing-game)
 (flags -w +a-4-40-41-42-44-66 -warn-error +a)
 (libraries
  base
  core ;; for Array.Permissioned
  core.command
  core_kernel.nonempty_list
  core_kernel.reversed_list
  stdio)
 (library_flags (-linkall))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
