(library
 (name turing_game)
 (public_name turing-game)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio)
 (libraries base core.command nonempty-list reversed-list stdio)
 (library_flags (-linkall))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_fields_conv
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx_js_style
   -check-doc-comments)))
