(library
 (name turing_game)
 (public_name turing-game)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Cmdlang)
 (libraries
  base
  cmdlang
  nonempty-list
  pp
  pplumbing.err
  pplumbing.log-cli
  reversed-list
  stdio)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (library_flags (-linkall))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_fields_conv
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
