(library
 (name turing_game_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Expect_test_helpers_base
  -open
  Turing_game)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  patdiff.expect_test_patdiff
  stdio
  turing_game)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
